Fixed timetable on mobile

--- a/client/styles/less/app.less
+++ b/client/styles/less/app.less
@@ -138,3 +138,10 @@ a {
   height: 32px;
   vertical-align: middle;
 }
+@media (max-width: 549px) {
+  .eventicon {
+    width: auto;
+    float: right;
+    margin-top: -28px;
+  }
+}
